--- a/indiceprogramaciofestivern.html
+++ b/indiceprogramaciofestivern.html
@@ -11,47 +11,47 @@
 <body>
 <H3>Dissabte 28 Desembre</H3>
 <ul>
-    <li><p><b>Maria Hein</b><i>_18.00h</i></p></li>
-    <li><p><b>Ginestra</b><i>_19.15h</i></p></li>
-    <li><p><b>Xanguito</b><i>_20.45h</i></p></li>
-    <li><p><b>Jarfaiter</b><i>_22.15h</i></p></li>
-    <li><p><b>Mushkaa</b><i>_23.45h</i></p></li>
-    <li><p><b>Zetak</b><i>_01.15h</i></p></li>
-    <li><p><b>porzak soup</b><i>_02.45h</i></p></li>
-    <li><p><b>Santy Matrix</b><i>_03.45h</i></p></li>
+    <li><b>Maria Hein</b><i>_18.00h</i></li>
+    <li><b>Ginestra</b><i>_19.15h</i></li>
+    <li><b>Xanguito</b><i>_20.45h</i></li>
+    <li><b>Jarfaiter</b><i>_22.15h</i></li>
+    <li><b>Mushkaa</b><i>_23.45h</i></li>
+    <li><b>Zetak</b><i>_01.15h</i></li>
+    <li><b>porzak soup</b><i>_02.45h</i></li>
+    <li><b>Santy Matrix</b><i>_03.45h</i></li>
 </ul>
 <h3>Diumenge 29 Desembre</h3>
 <ul>
-    <li><p><b>Sandra Monfort</b><i>_18.00h</i></p></li>
-    <li><p><b>31 FAM</b><i>_19.15h</i></p></li>
-    <li><p><b>Pep de la tona</b><i>_20.45h</i></p></li>
-    <li><p><b>Green valey</b><i>_22.15</i></p></li>
-    <li><p><b>Talco</b><i>_23.45h</i></p></li>
-    <li><p><b>Envidia Kotxina</b><i>_01.15h</i></p></li>
-    <li><p><b>Holistiks</b><i>_02.45h</i></p></li>
-    <li><p><b>Pains DJ Set</b><i>_03.45h</i></p></li>
+    <li><b>Sandra Monfort</b><i>_18.00h</i></li>
+    <li><b>31 FAM</b><i>_19.15h</i></li>
+    <li><b>Pep de la tona</b><i>_20.45h</i></li>
+    <li><b>Green valey</b><i>_22.15</i></li>
+    <li><b>Talco</b><i>_23.45h</i></li>
+    <li><b>Envidia Kotxina</b><i>_01.15h</i></li>
+    <li><b>Holistiks</b><i>_02.45h</i></li>
+    <li><b>Pains DJ Set</b><i>_03.45h</i></li>
 </ul>
 <h3>Dilluns 30 Desembre</h3>
 <ul>
-    <li><p><b>Quinto</b><i>_18.00h</i></p></li>
-    <li><p><b>Suu</b><i>_19.15h</i></p></li>
-    <li><p><b>Els Catarres</b><i>_20.30h</i></p></li>
-    <li><p><b>Buhos</b><i>_22.00h</i></p></li>
-    <li><p><b>Figa Flawas</b><i>_01.45h</i></p></li>
-    <li><p><b>Sa pena</b><i>_03.15h</i></p></li>
-    <li><p><b>DJ Plan B</b><i>_04.00h</i></p></li>
+    <li><b>Quinto</b><i>_18.00h</i></li>
+    <li><b>Suu</b><i>_19.15h</i></li>
+    <li><b>Els Catarres</b><i>_20.30h</i></li>
+    <li><b>Buhos</b><i>_22.00h</i></li>
+    <li><b>Figa Flawas</b><i>_01.45h</i></li>
+    <li><b>Sa pena</b><i>_03.15h</i></li>
+    <li><b>DJ Plan B</b><i>_04.00h</i></li>
 </ul>
 <h3>Dimarts 31 Desembre</h3>
 <ul>
-    <li><p><b>La Trocamba</b><i>_18.30h</i></p></li>
-    <li><p><b>La Fumiga</b><i>_20.00h</i></p></li>
-    <li><p><b>Malifeta</b><i>_21.15h</i></p></li>
-    <li><p><b>Tacho</b><i>_23.15h</i></p></li>
-    <li><p><b>Campanades</b>_00.00h</p></li>
-    <li><p><b>Xavi Sarria</b><i>_00.05h</i></p></li>
-    <li><p><b>Flash Ice Cream</b><i>_01.45h</i></p></li>
-    <li><p><b>Boom Boom fighters</b><i>_03.15h</i></p></li>
-    <li><p><b>DJ trapella</b><i>_04.15h</i></p></li>
+    <li><b>La Trocamba</b><i>_18.30h</i></li>
+    <li><b>La Fumiga</b><i>_20.00h</i></li>
+    <li><b>Malifeta</b><i>_21.15h</i></li>
+    <li><b>Tacho</b><i>_23.15h</i></li>
+    <li><b>Campanades</b><i>_00.00h</i></li>
+    <li><b>Xavi Sarria</b><i>_00.05h</i></li>
+    <li><b>Flash Ice Cream</b><i>_01.45h</i></li>
+    <li><b>Boom Boom fighters</b><i>_03.15h</i></li>
+    <li><b>DJ trapella</b><i>_04.15h</i></li>
 </ul>
 </body>
 </html>
